nav en capital sur petit ecran , nav souligner sur la page correspondante, fix pb baniere dans la page à propos width, ajout des menu collapse en dynamique dans la page a propose depuis fichier js

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -22,11 +22,18 @@ header {
     color:$primary;
     margin-right:20px;
     font-size:1.2em;
+    text-transform: uppercase;
     &:hover{
         text-decoration:underline;
         }
         @media (min-width:848px){
             font-size:1.5em;
+            text-transform: capitalize;
+            
 
         }
+}
+
+.active {
+    text-decoration: underline;
 }
